tests/ui/cast/ptr-to-trait-obj-ok.stderr
error: lifetime may not live long enough
  --> $DIR/ptr-to-trait-obj-ok.rs:39:5
   |
LL | fn cast_away_higher_ranked_wrap<'a>(x: *mut dyn for<'b> Trait<'b>) -> *mut Wrapper<dyn Trait<'a>> {
   |                                 -- lifetime `'a` defined here
LL |     x as _
   |     ^^^^^^ returning this value requires that `'a` must outlive `'static`
   |
   = note: requirement occurs because of a mutable pointer to `Wrapper<dyn Trait<'_>>`
   = note: mutable pointers are invariant over their type parameter
   = help: see <https://doc.rust-lang.org/nomicon/subtyping.html> for more information about variance

error[E0308]: mismatched types
  --> $DIR/ptr-to-trait-obj-ok.rs:39:5
   |
LL |     x as _
   |     ^^^^^^ one type is more general than the other
   |
   = note: expected trait object `dyn for<'b> Trait<'b>`
              found trait object `dyn Trait<'_>`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
